--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,13 @@ p {
 }
 
 .cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: rgb(61, 0, 217) solid;
   width: 150px;
   height: 150px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-size: 130px;
+  font-weight: bold;
 }
