--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,77 @@ p {
   font-size: 130px;
   font-weight: bold;
 }
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #140622;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#player-1,
+#player-2 {
+  display: flex;
+  align-items: center;
+  font-size: 45px;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.selector {
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 12px 32px;
+  width: 150px;
+  margin: 1rem;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  border-radius: 50px;
+  box-shadow: rgba(var(--primary-color), 0.5) 0px 0px 20px 0px;
+  transition: all 0.3s ease;
+}
+
+.btn-container1,
+.btn-container2 {
+  display: flex;
+  flex-direction: row;
+}
