--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ p {
 
 /* Modal Content */
 .modal-content {
-  background-color: #140622;
+  background-color: #000000;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
@@ -182,21 +182,29 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: rgba(var(--text-color));
+  border: 2px double transparent;
+  background-image: linear-gradient(rgb(13, 14, 33), rgb(13, 14, 33)),
+    radial-gradient(circle at left top, rgb(1, 110, 218), rgb(217, 0, 192));
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
 }
 
 .selector {
   font-family: sans-serif;
   font-size: 18px;
   font-weight: bold;
+  border-radius: 30px;
   padding: 12px 32px;
   width: 150px;
   margin: 1rem;
   cursor: pointer;
-  border-radius: 4px;
-  transition: all 0.3s ease;
-  border-radius: 50px;
-  box-shadow: rgba(var(--primary-color), 0.5) 0px 0px 20px 0px;
-  transition: all 0.3s ease;
+  color: rgba(var(--text-color));
+  border: 2px double transparent;
+  background-image: linear-gradient(rgb(13, 14, 33), rgb(13, 14, 33)),
+    radial-gradient(circle at left top, rgb(1, 110, 218), rgb(217, 0, 192));
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
 }
 
 .btn-container1,
